# Sistema_de_arquivos

Sistema_de_arquivos/: CMakeLists.txt  Sistema_de_arquivos.pro  Sistema_de_arquivos.pro.user.e57277a  directory.cpp  directory.h  file.cpp  file.h  filesystem.h  filesystemnode.h  mainwindow.cpp  mainwindow.h
backup trampo/Sistema_de_arquivos/: Sistema_de_arquivos.pro  directory.cpp  directory.h  file.cpp  file.h  filesystem.h  filesystemmodel.cpp  filesystemmodel.h  filesystemnode.h  mainwindow.cpp  mainwindow.h
untitled/: CMakeLists.txt  filesystem.h  main.cpp
